[package]
name = "normpath"
version = "0.1.0"
edition = "2021"
description = "Path normalizer"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
unicode-normalization = "0.1.24"

[profile.release]
codegen-units = 1
lto = true
strip = true
